tests/snapshots/in_a_80_wide@linux-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  1.5 MiB | 2 folders unreadable (d) | scanned 0 s ago
  20.0 KiB+ 62.5% b/                              12.0 KiB  c/
   8.0 KiB  25.0% h1                               8.0 KiB  f2
   8.0 KiB  25.0% h2                                   0 B  l…/ (denied: EACCES)
   4.0 KiB  12.5% f1













b/ | 20.0 KiB  own 8.0 KiB | 1 folder below unreadable
hjkl move  i info  u units  space pick  p picks  r reveal  ? help  q quit
--- styles ---
 0  10..17  BOLD
 0  17..20  DarkGray
 0  44..47  DarkGray
 1   0..47  Indexed(231) on Indexed(25) BOLD
 1  48..58  Green
 1  58..59  DarkGray
 1  60..62  BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  48..58  Green
 2  58..59  DarkGray
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  48..59  DarkGray
 3  60..61  BOLD
 3  61..62  DarkGray
 3  62..63  BOLD
 3  63..80  Red
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
18   0..2   BOLD
18   2..5   DarkGray
18   5..13  Green
18  13..19  DarkGray
18  26..29  DarkGray
18  29..54  Yellow
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..60  Cyan BOLD
19  67..68  Cyan BOLD
