tests/snapshots/in_b_without_colours@linux-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  1.5 MiB | 2 folders unreadable (d) | scanned 0 s ago
  20.0 KiB+ b/         12.0 KiB  60.0% c/                                12.0 KiB  f3
   8.0 KiB  h1          8.0 KiB  40.0% f2
   8.0 KiB  h2              0 B        locked/ (denied: EACCES)
   4.0 KiB  f1













c/ | 12.0 KiB  own 12.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..17  BOLD
 1   0..12  UNDERLINED
 1  12..14  BOLD | UNDERLINED
 1  14..20  UNDERLINED
 1  21..39  REVERSED
 1  39..41  BOLD | REVERSED
 1  41..70  REVERSED
 3  39..46  BOLD
18   0..2   BOLD
19   0..4   BOLD
19  11..12  BOLD
19  19..20  BOLD
19  28..33  BOLD
19  40..41  BOLD
19  49..50  BOLD
19  59..62  BOLD
19  71..72  BOLD
19  81..82  BOLD
19  89..90  BOLD
