tests/snapshots/keys@linux-d0-s0.snap
---
source: tests/browse.rs
---
keys
Up Down k j       move
PageUp PageDown   move by a screen
Home End g G      go to the first or the last row
Right Enter l     go into the directory; on the volume list, scan the volume
Left Backspace h  go to the parent directory
r                 reveal in Finder or the file manager
o                 open
space             pick or unpick the selected item, to delete by hand later
p                 list the picks, with their sizes now; space unpicks
c                 sort by how much each item changed this session; again for size
s                 rescan the selected directory
S                 rescan everything
/                 filter the column by text; Enter keeps the filter, Esc clears it
d                 list the directories that could not be read, and why
t                 list the largest files
i                 show everything about the selected item
u                 switch sizes between GiB (1024) and GB (1000)
?                 show or hide this help
? or esc close
--- styles ---
 1   0..18  Cyan BOLD
 2   0..18  Cyan BOLD
 3   0..18  Cyan BOLD
 4   0..18  Cyan BOLD
 5   0..18  Cyan BOLD
 6   0..18  Cyan BOLD
 7   0..18  Cyan BOLD
 8   0..18  Cyan BOLD
 9   0..18  Cyan BOLD
10   0..18  Cyan BOLD
11   0..18  Cyan BOLD
12   0..18  Cyan BOLD
13   0..18  Cyan BOLD
14   0..18  Cyan BOLD
15   0..18  Cyan BOLD
16   0..18  Cyan BOLD
17   0..18  Cyan BOLD
18   0..18  Cyan BOLD
19   0..1   Cyan BOLD
