tests/snapshots/labels@macos-d0-s0.snap
---
source: tests/browse.rs
---
/labels  48.0 KiB
  20.0 KiB  41.7% rust/                                        16.0 KiB  target/
  12.0 KiB  25.0% node_modules/                                 4.0 KiB  Cargo.toml
   8.0 KiB  16.7% target/
   4.0 KiB   8.3% __pycache__/
   4.0 KiB   8.3% tagged/
       0 B        .venv/
       0 B        Downloads/
       0 B        venv/









rust/ | 20.0 KiB  own 4.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0   9..17  BOLD
 1   0..60  Indexed(231) on Indexed(25) BOLD
 1  61..71  Green
 1  71..72  DarkGray
 1  73..80  Green BOLD
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..31  Green BOLD
 2  61..71  Green
 2  71..72  DarkGray
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..25  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..30  Green BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  Green BOLD
 6   0..11  DarkGray
 6  12..17  DarkGray
 6  18..24  Green BOLD
 7   0..11  DarkGray
 7  12..17  DarkGray
 7  18..28  Yellow BOLD
 8   0..11  DarkGray
 8  12..17  DarkGray
 8  18..23  BOLD
18   0..5   BOLD
18   5..8   DarkGray
18   8..16  Green
18  16..22  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
