tests/snapshots/labels_on_a_cache@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/labels  88.0 KiB | scanned 0 s ago
  28.0 KiB  31.8% rust/                                        12.0 KiB  m
  16.0 KiB  18.2% node_modules/
  12.0 KiB  13.6% target/
   8.0 KiB   9.1% __pycache__/
   8.0 KiB   9.1% tagged/
   4.0 KiB   4.5% .venv/
   4.0 KiB   4.5% Downloads/
   4.0 KiB   4.5% venv/









node_modules/ | 16.0 KiB  own 16.0 KiB | cache: npm: npm install rebuilds it
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  t top  o open  ? help  q quit
--- styles ---
 0   9..17  BOLD
 0  17..20  DarkGray
 1   0..10  Green
 1  10..11  DarkGray
 1  12..17  Green
 1  18..23  BOLD
 1  61..71  Green
 1  71..72  DarkGray
 2   0..60  Indexed(231) on Indexed(25) BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..25  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..30  Green BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..25  Green BOLD
 6   0..10  Green
 6  10..11  DarkGray
 6  12..17  Green
 6  18..24  Green BOLD
 7   0..10  Green
 7  10..11  DarkGray
 7  12..17  Green
 7  18..28  Yellow BOLD
 8   0..10  Green
 8  10..11  DarkGray
 8  12..17  Green
 8  18..23  BOLD
18   0..13  Green BOLD
18  13..16  DarkGray
18  16..24  Green
18  24..30  DarkGray
18  38..41  DarkGray
18  41..76  Green
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  88..89  Cyan BOLD
19  96..97  Cyan BOLD
19 104..105 Cyan BOLD
